# mini-pgw

./: README.md
server/: .gitignore  CMakeLists.txt
server/dependencies/: build_p7.bash  install_all.cmake  p7.cmake
server/source/: main.cpp
server/source/logger/: ILogger.h  LoggerFactory.cpp  LoggerFactory.h  P7Logger.cpp  P7Logger.h
